fix: Digest sender review round 2 - EXO-89539 - eXIP7.3.0.22
- ITEM_DATE is the insert moment: a row written during a run belongs to the next window
- the run leaves the Spring scheduler thread, one run at a time
- DigestLine.of tolerates a null argument
- placeholders replaced in one pass, arguments are never re-expanded
- the per-user grouping pin now counts the tasks
- one stack trace per failure, at debug level

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>